add rabbi_id and rabbi_list
